Tidy up Hearing Corresponder and Corresponder helper